test/integration/bad/string_literal_newline.stan
transformed data {
  print(
  "print
  lines");
}
